fix(GlFilteredSearch): Prevent filtered search token overflow
Also border radius when history button is enabled

--- a/src/scss/utility-mixins/border.scss
+++ b/src/scss/utility-mixins/border.scss
@@ -383,6 +383,12 @@
 @mixin gl-rounded-pill {
   border-radius: $gl-spacing-scale-4;
 }
+
+@mixin gl-rounded-left-none {
+  border-top-left-radius: 0;
+  border-bottom-left-radius: 0;
+}
+
 @mixin gl-rounded-left-base {
   border-top-left-radius: $gl-border-radius-base;
   border-bottom-left-radius: $gl-border-radius-base;
